使用评论区展开、收起的图标，优化在线人数显示，给关于本站添加了超链接

--- a/frontend/src/assets/css/global.css
+++ b/frontend/src/assets/css/global.css
@@ -4,6 +4,7 @@
     --text-color: #333333;
     --primary-color: #f9a825;
     --primary-color-rgb: 249, 168, 37;
+    --link-color: #c67100;
     --border-color: #ccc;
 
     /* Playlist */
@@ -75,6 +76,7 @@
     --text-color: #e0e0e0;
     --primary-color: #ffb74d;
     --primary-color-rgb: 255, 183, 77;
+    --link-color: #8ab4f8;
     --border-color: #444;
 
     /* Playlist */
